Source/WebCore/platform/graphics/chromium/cc/CCPrioritizedTextureManager.h
@@ -78,7 +78,8 @@ public:
 
     void reduceMemory(CCResourceProvider*);
     void clearAllMemory(CCResourceProvider*);
-    void allBackingTexturesWereDeleted();
+    void unlinkAllBackings();
+    void deleteAllUnlinkedBackings();
 
     void acquireBackingTextureIfNeeded(CCPrioritizedTexture*, CCResourceProvider*);
 
